--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,5 +4,9 @@
 
 <%= link_to "edit", edit_article_path(@article) %>
 
-<%= link_to "<< Back to Articles List", articles_path %>
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
 
+<%= render partial: 'comments/form' %>
+
+<%= link_to "<< Back to Articles List", articles_path %>
