--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Articles</h1>
-
+<% if logged_in? %>
 <ul id="articles">
   <% @articles.each do |article| %>
     <li>
@@ -9,4 +9,4 @@
 </ul>
 
 <%= link_to "Create a New Article", new_article_path, class: "new_article" %>
-
+<% end %>
